cmake_minimum_required(VERSION 3.21)
project(projeto)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

#add_executable(projeto
 #       Estafeta.hpp)
#add_executable(projeto
 #       Ecomenda.hpp)


#add_executable(projeto
#       Cenario1.cpp)
#add_executable(projeto
 #       Cenario2.cpp)

add_executable(projeto
        Cenario3.cpp)